version/0.20/_sources/api/solver/_autosummary/settings/cathode_cl_zone.rst.txt
:orphan:

.. _cathode_cl_zone:

cathode_cl_zone
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.cathode_cl_zone.cathode_cl_zone
    :show-inheritance:

.. rubric:: Attributes

==================================================   ==========================================

Attribute                                                                               Summary

==================================================   ==========================================
:ref:`cathode_cl_zone_list <cathode_cl_zone_list>`       Set cathode catalyst layer cell zones.

:ref:`cathode_cl_update <cathode_cl_update>`                 Use Collective Boundary Condition.

:ref:`cathode_cl_material <cathode_cl_material>`               Cathode catalyst layer material.

:ref:`cathode_cl_porosity <cathode_cl_porosity>`               Cathode catalyst layer porosity.

:ref:`cathode_cl_kr <cathode_cl_kr>`                        Cathode catalyst layer permibility.

==================================================   ==========================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`cathode <cathode>`       'cathode' child.

========================   ====================

