version/0.23/_sources/api/solver/_autosummary/settings/cathode_cl_zone.rst.txt
:orphan:

.. _cathode_cl_zone:

cathode_cl_zone
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.cathode_cl_zone.cathode_cl_zone
    :show-inheritance:

.. rubric:: Attributes

========================================================   ===========================================================

Attribute                                                                                                      Summary

========================================================   ===========================================================
:ref:`cathode_cl_zone_list <cathode_cl_zone_list>`                              Set cathode catalyst layer cell zones.

:ref:`cathode_cl_update <cathode_cl_update>`                                        Use Collective Boundary Condition.

:ref:`cathode_cl_material <cathode_cl_material>`                                      Cathode catalyst layer material.

:ref:`cathode_cl_porosity <cathode_cl_porosity>`                                      Cathode catalyst layer porosity.

:ref:`cathode_cl_kr <cathode_cl_kr>`                                              Cathode catalyst layer permeability.

:ref:`cathode_cl_svratio <cathode_cl_svratio>`                            Cathode catalyst layer surface volume ratio.

:ref:`cathode_cl_thickness <cathode_cl_thickness>`                                   Cathode catalyst layer thickness.

:ref:`cathode_cl_conductivity <cathode_cl_conductivity>`                          Cathode catalyst layer conductivity.

:ref:`cathode_cl_cp_function <cathode_cl_cp_function>`                               Capillary pressure function name.

:ref:`cathode_cl_angle <cathode_cl_angle>`                                       Cathode catalyst layer contact angle.

:ref:`cathode_cl_a <cathode_cl_a>`                             Cathode catalyst layer Leverett function coefficient a.

:ref:`cathode_cl_b <cathode_cl_b>`                             Cathode catalyst layer Leverett function coefficient b.

:ref:`cathode_cl_c <cathode_cl_c>`                             Cathode catalyst layer Leverett function coefficient c.

========================================================   ===========================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`cathode <cathode>`       Set up cathode.

========================   ===================

